<resources>
    <string name="app_name">MVVMSec01</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">name</string>
    <string name="isbn">isbn</string>
    <string name="editorial">editorial</string>
    <string name="autor">autor</string>
    <string name="a_o">año</string>
</resources>